--- a/beltclient/src/app/main/main.component.html
+++ b/beltclient/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<p>Logged in as {{ currentUser.name }} | <a [routerLink]="['list']">Auction List</a> |<button (click)="logout()">Logout</button></p>
+<p>Logged in as {{ currentUser.name }} | <button (click)="logout()">Logout</button></p>
 
 
 <router-outlet></router-outlet>
