--- a/beltclient/src/app/main/main.component.html
+++ b/beltclient/src/app/main/main.component.html
@@ -1,5 +1,103 @@
-<p>Logged in as {{ currentUser.name }} | <button (click)="logout()">Logout</button></p>
 
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Annual Fund</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#myCarousel">HOME</a></li>
+        <li><a href="#bidding">BIDDING</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Merchandise</a></li>
+            <li><a href="#">Extras</a></li>
+            <li><a href="#"></a></li> 
+          </ul>
+        </li>
+        <li><a href="#" (click)="logout()">LOGOUT</a></li>
+        
+        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="row">
+	<div class="col-sm-8">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#myCarousel" data-slide-to="1"></li>
+		    <li data-target="#myCarousel" data-slide-to="2"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <img src="../../assets/img/party1.jpg" alt="New York">
+		      <div class="carousel-caption">
+		        <h3>Cruises</h3>
+		        <p>The atmosphere in New York is lorem ipsum.</p>
+		      </div> 
+		    </div>
+
+		    <div class="item">
+		      <img src="../../assets/img/cruise.jpg" alt="New York">
+		      <div class="carousel-caption">
+		        <h3>Cruises</h3>
+		        <p>The atmosphere in New York is lorem ipsum.</p>
+		      </div> 
+		    </div>
+
+		    <div class="item">
+		      <img src="../../assets/opera2.jpg" alt="Chicago">
+		      <div class="carousel-caption">
+		        <h3>Opera Tickets</h3>
+		        <p>Thank you, Chicago - A night we won't forget.</p>
+		      </div> 
+		    </div>
+
+		    <div class="item">
+		      <img src="../../assets/img/spa2.jpg" alt="Los Angeles">
+		      <div class="carousel-caption">
+		        <h3>Spa Days</h3>
+		        <p>Even though the traffic was a mess, we had the best time.</p>
+		      </div> 
+		    </div>
+		  </div>
+
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+	</div>
+	
+
+	<div class="col-sm-4">
+		<h1> A Night to Remember</h1>
+		<p> Come join your friends for a night to celebrate our school community and raise money for our Annual Fund.</p>
+
+		<p> Scroll down to see some of the wonderful auction items available this year!</p>
+
+	</div>	
+</div>
 
 <router-outlet></router-outlet>
 
