fixed error in list component

--- a/beltclient/src/app/main/list/list.component.html
+++ b/beltclient/src/app/main/list/list.component.html
@@ -52,5 +52,5 @@
 </form>
 
 
-<p *ngIf="currentUser.level == 2"><button (click)="updateStatus($event)">End the Bidding</button></p>
+<p><button (click)="updateStatus($event)">End the Bidding</button></p>
 
