--- a/beltclient/src/app/main/show/show.component.html
+++ b/beltclient/src/app/main/show/show.component.html
@@ -19,7 +19,7 @@
 </table>
 
 
-<form *ngIf="currentUser.level == 2" (submit)="onSubmit($event)">
+<form (submit)="onSubmit($event)">
 	<input type="submit" value="Restart Bidding">
 </form>
 
