small change to list page

--- a/beltclient/src/app/main/list/list.component.html
+++ b/beltclient/src/app/main/list/list.component.html
@@ -11,7 +11,7 @@
 			      <p>More Info</p>
 			      <p><strong>Current Bids</strong></p>
 			      <p *ngFor="let bid of one._bids">${{ bid.amt }} by {{ bid.bidder }} </p>
-			      <button class="activate" (click)="activate()">Bid</button>
+			      <!-- <button class="activate" (click)="activate()">Bid</button> -->
 			      	<!-- <div>
 				      <form class="form" (submit)="onBid($event)">
 				      	<input 
